--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
         <h1>Lista de tarefas</h1>
     </header>
-    <form id="form">
+<form id="form">
         <input type="text" id="tarefa" required placeholder="tarefa" />
         <button  type="submit">Cadastrar</button>
-    <form>
+</form>
         <div class="lista"> 
             <ul>
             </ul>
